--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>When Coach Snyder accepted this job and took on the task of rebuilding this program, he had one goal in mind. His famous line of, “I think the opportunity for the greatest turnaround in college football exists here today, and it’s not one to be taken lightly,” was just a foretaste of what was yet to come.</p>
         </blockquote>
         <h3>Coach has had a long and stories career at K-state. If you'd like to read more about this living legend 
-            <a href="https://en.wikipedia.org/wiki/Bill_Snyder" target="_blank">click here now!</a></h3>
+            <a id="tribute-link" href="https://en.wikipedia.org/wiki/Bill_Snyder" target="_blank">click here now!</a></h3>
     </div>
     
 
